# adventofcode

./: .gitignore  README.md
2020/clojure/: README.md  deps.edn
2021/julia/: Project.toml  README.md
2021/julia/day_01/: README.md  core.jl  part_one.jl  part_two.jl  runtests.jl
2021/julia/day_02/: README.md  common.jl  part_one.jl  part_two.jl  runtests.jl
2021/julia/day_03/: README.md  common.jl  part_one.jl  part_two.jl  runtests.jl
2021/julia/day_04/: README.md  common.jl  example.jl  part_one.jl  part_two.jl  runtests.jl
2021/julia/day_05/: README.md  common.jl  example.jl  part_one.jl  part_two.jl  runtests.jl
2021/julia/day_06/: README.md  common.jl  part_one.jl  runtests.jl
2022/julia/: README.md
2022/julia/day_01/: README.md  common.jl  part_one.jl  part_two.jl  runtests.jl
2022/julia/day_02/: README.md  common.jl  part_one.jl  part_two.jl  runtests.jl
2022/julia/day_03/: README.md  common.jl  part_one.jl  part_two.jl  runtests.jl
2022/julia/day_04/: README.md  common.jl  part_one.jl  part_two.jl  runtests.jl
2022/julia/day_05/: README.md  runtests.jl
2023/elixir/: README.md  mix.exs
2024/: README.md
2024/elixir/: README.md  justfile  mix.exs
2024/python/: .gitignore  README.md  justfile  pyproject.toml
2024/python/advent/: __init__.py
2024/python/advent/day01/: __init__.py  main.py
2024/python/advent/day02/: __init__.py  main.py
2024/python/advent/day03/: __init__.py  main.py
2024/python/advent/day04/: __init__.py  main.py
2024/python/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py
(+47 files in other folders)
