[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Damien Garaud"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.30.0"
ruff = "^0.8.1"
mypy = "^1.13.0"
icecream = "^2.1.3"
numpy = "^2.1.3"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.241126"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^1.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]


[tool.mypy]
plugins = "numpy.typing.mypy_plugin"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
